third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/duplicate-table-array.stderr
TOML parse error at line 2, column 1
  |
2 | [[tbl]]
  | ^
invalid table header
duplicate key `tbl` in document root
